# git-sniff

./: .gitignore  README.md  SPEC.md  pyproject.toml
.claude-plugin/: plugin.json
docs/decisions/: 0001-native-messaging-transport.md
docs/superpowers/plans/: 2026-05-26-native-messaging-host.md
docs/superpowers/specs/: 2026-05-26-native-messaging-host-design.md
extension/: background.js  content.css  content.js  manifest.json
git_sniff/: __init__.py  auth.py  client.py  engine.py  main.py  metrics.py  native_host.py  schemas.py  server.py
git_sniff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/repo-hygiene/: SKILL.md
skills/repo-hygiene/references/: scoring.md
skills/repo-hygiene/scripts/: sniff.sh
tests/: test_adapters.py  test_auth.py  test_engine.py  test_metrics.py  test_native_host.py
